test/zinc_source/compile_errors/metadata/04_has_component_wrong_arity.zn
// expected-error: has_component\(\) expects exactly two arguments

struct A {
}

fn main() {
    print(has_component(A))
}
